@@ -81,6 +81,7 @@ enum {
   MAX_BREAKPOINTS2_DATA = 2,
   MAX_BREAKPOINTS2 = 4,
   // various slot #s
+  BREAKPOINT2_XMEGA_UNAVAIL = 1,
   BREAKPOINT2_FIRST_DATA = 2,
   BREAKPOINT2_DATA_MASK = 3,
 
